--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         <ul class="social-media-list">
           {% if site.gitlab_username %}
           <li>
-            {% include icon-gitlab.html username=site.gitlab_username %}
+            {% include icon-colab.html name='CNN' id='1JQ0O0u_J18TkifCmi2h8PUnuRTVXijl6?hl=es#scrollTo=8bUADICjg2qQ' %}
           </li>
           {% endif %}
 
